--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,6 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  project_module_redmine_features_for_testers: For Redmine Testers
+  permission_switch_admin_to_user_and_back: Switch admin to user and back
   switch_admin_to_user_and_back: 'Admin/User'
